--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ header {
     .container {
         width: 100%;
     }
+
     .navbar {
         width: 100%;
     }
@@ -68,7 +69,8 @@ header {
 /* Style the button */
 #button {
     padding: 15px 20px;
-    background-color: #28a745; /* Updated background color */
+    background-color: #28a745;
+    /* Updated background color */
     color: #fff;
     border: none;
     border-radius: 25px;
@@ -78,13 +80,16 @@ header {
     align-items: center;
     position: relative;
     overflow: hidden;
-    transition: background-color 0.4s ease, box-shadow 0.4s ease; /* Smooth background and shadow transitions */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
+    transition: background-color 0.4s ease, box-shadow 0.4s ease;
+    /* Smooth background and shadow transitions */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    /* Add shadow for depth */
 }
 
-#currloc_button{
+#currloc_button {
     padding: 5px 10px;
-    background-color: #28a745; /* Updated background color */
+    background-color: #28a745;
+    /* Updated background color */
     color: #fff;
     border: none;
     border-radius: 25px;
@@ -94,48 +99,63 @@ header {
     align-items: center;
     position: relative;
     overflow: hidden;
-    transition: background-color 0.4s ease, box-shadow 0.4s ease; /* Smooth background and shadow transitions */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
+    transition: background-color 0.4s ease, box-shadow 0.4s ease;
+    /* Smooth background and shadow transitions */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    /* Add shadow for depth */
 }
 
-#currloc_button:hover{
+#currloc_button:hover {
     background-color: rgb(0, 99, 0);
 }
 
 .button-text {
-    transition: opacity 0.4s ease, transform 0.4s ease; /* Smooth text transitions */
+    transition: opacity 0.4s ease, transform 0.4s ease;
+    /* Smooth text transitions */
 }
 
 .arrow {
     margin-left: 10px;
-    opacity: 0; /* Hide the arrow initially */
-    transform: translateX(-10px); /* Position arrow to the left */
-    transition: transform 0.4s ease, opacity 0.4s ease; /* Add transition for smooth effect */
+    opacity: 0;
+    /* Hide the arrow initially */
+    transform: translateX(-10px);
+    /* Position arrow to the left */
+    transition: transform 0.4s ease, opacity 0.4s ease;
+    /* Add transition for smooth effect */
 }
 
 #button:hover {
-    background-color: #218838; /* Darken background on hover */
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3); /* Enhance shadow on hover */
+    background-color: #218838;
+    /* Darken background on hover */
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+    /* Enhance shadow on hover */
 }
 
 #button:hover .button-text {
-    opacity: 0; /* Hide the text on hover */
-    transform: translateX(-10px); /* Slightly move text to the left */
+    opacity: 0;
+    /* Hide the text on hover */
+    transform: translateX(-10px);
+    /* Slightly move text to the left */
 }
 
 #button:hover .arrow {
-    opacity: 1; /* Show the arrow on hover */
-    transform: translateX(0); /* Move the arrow into position */
+    opacity: 1;
+    /* Show the arrow on hover */
+    transform: translateX(0);
+    /* Move the arrow into position */
 }
 
 
-#result {
+/* #result {
     margin-top: 20px;
     padding: 10px;
     border: 1px solid #cccccc;
-}
+} */
 
 .result-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
     padding: 10px;
     border: 5px solid black;
@@ -144,9 +164,10 @@ header {
 }
 
 #result {
-    margin: 30px 10px 10px 10px;
+    margin: 10px 10px 10px 10px;
     padding: 10px;
     border: 1px solid #cccccc;
+    align-self: center;
 }
 
 #result .temp {
@@ -220,6 +241,7 @@ header {
         width: 80%;
         font-size: 2em;
     }
+
     .nav-item {
         margin: 0 10px;
     }
@@ -313,7 +335,7 @@ footer {
 }
 
 .loader::after {
-    content: '';  
+    content: '';
     left: 0;
     right: 0;
     margin: auto;
@@ -332,6 +354,7 @@ footer {
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
@@ -358,17 +381,24 @@ dotlottie-player {
 
 /* Styles for the spinner (adjust as needed) */
 .spinner {
-    border: 4px solid #3498db; /* Color of the spinner */
+    border: 4px solid #3498db;
+    /* Color of the spinner */
     border-top: 4px solid transparent;
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    animation: spin 1s linear infinite; /* Rotation animation */
+    animation: spin 1s linear infinite;
+    /* Rotation animation */
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 
@@ -425,20 +455,73 @@ dotlottie-player {
     background-color: #1f639e;
 }
 
+
+.card-content {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.left-side,
+.right-side {
+    flex: 1;
+    padding: 10px;
+    align-self: center;
+}
+
+.separator {
+    width: 1px;
+    background-color: #cccccc;
+    margin: 0 10px;
+}
+
+.result-box {
+    font-size: 1em;
+    text-align: left;
+    color: #ecf0f1;
+    padding: 20px;
+    background-color: #8db6e6;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+}
+
+.result-box p {
+    margin: 5px 0;
+}
+
+.value {
+    font-weight: bold;
+}
+
+.city {
+    font-size: 1.2em;
+}
+
+.temp {
+    font-size: 2em;
+}
+
+.description {
+    font-size: 1.1em;
+}
+
 /* Mobile-First Responsive Design */
 /* Smaller screens, like smartphones */
 @media (max-width: 768px) {
+
     /* Adjust the header and landing text */
     header {
         font-size: 20px;
     }
 
     .landing-text {
-        font-size: 4rem; /* Adjust to your preference */
+        font-size: 4rem;
+        /* Adjust to your preference */
     }
 
     .landing-text-2 {
-        font-size: 0.7rem; /* Adjust to your preference */
+        font-size: 0.7rem;
+        /* Adjust to your preference */
     }
 
     /* Modify the container width and padding */
@@ -472,13 +555,15 @@ dotlottie-player {
         padding: 2px;
     }
 }
-.content{
+
+.content {
     width: 100%;
     display: flex;
     flex-direction: column;
     height: 100%;
     overflow-x: hidden;
 }
+
 /* DROPDOWN MENU */
 .dropbtn {
     background-color: rgb(0, 81, 255);
@@ -489,45 +574,48 @@ dotlottie-player {
     font-size: 16px;
     border: none;
     cursor: pointer;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #110505;
     min-width: 100px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
     color: rgb(246, 231, 231);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     cursor: pointer;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #0051ff}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #0051ff
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
     display: block;
-  }
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
     background-color: gray;
-  }
+}
+
 /* DROPDOWN ENDS */
 
 /* Media query for screens between 768px and 1000px width */
@@ -535,9 +623,11 @@ dotlottie-player {
     .container {
         width: 90%;
     }
+
     .navbar {
         width: 80%;
     }
+
     .landing-text {
         font-size: 6rem;
     }
