--- a/css/about-style.css
+++ b/css/about-style.css
@@ -17,7 +17,7 @@ body {
     max-width: 800px;
     margin: 20px auto; /* Add margin to the top and bottom */
     background-color: rgba(25, 33, 61, 0.5);
-    backdrop-opacity: 10;
+    /* backdrop-opacity: 10; */
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
@@ -97,7 +97,7 @@ h2 {
 p {
     font-size: 16px;
     line-height: 1.5;
-    background-color: ;
+   
     color: white;
     text-align: center;
     border-radius: 10px;
@@ -155,6 +155,8 @@ a{
     }
     .navbar {
         width: 90%;
+        margin-top: 15px;
+        font-size: 14px;
     }
     .navbar a {
         padding: 10px 15px;
