--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 /* Style the header */
 header {
-    background-color: rgb(20 24 75 / 60%);;
+    background-color: rgb(20 24 75 / 60%);
     color: rgb(0, 229, 255);
     text-align: center;
     padding: 30px 0;
