--- a/css/about-style.css
+++ b/css/about-style.css
@@ -131,14 +131,14 @@ ul li {
     padding: 10px 0;
     border-radius: 10px;
 } */
-footer {
+/* footer {
     background-color: black;
     color: #fff;
     text-align: center;
-    padding: 15px 0px;
+    padding: 15px 0px; */
     /* position: absolute;
     bottom: 0px; */
-}
+/* } */
 
 #list {
     margin-left: 20px;
@@ -175,6 +175,12 @@ a {
     }
     .navbar a {
         padding: 10px 15px;
+    }
+    footer {
+        position: relative;
+        margin-top: 26vh;
+        font-size: 12px;
+        padding: 2px;
     }
 }
 
@@ -217,4 +223,39 @@ a {
 .navbar ul li a:hover {
     background-color: #f0f0f0; /* Changes background on hover */
     color: #000; /* Darker text on hover */
+}
+
+/* footer */
+footer {
+    background-color: rgb(0, 0, 0);
+    color: rgb(185, 182, 182);
+    text-align: center;
+    padding: 5px;
+    margin-top: 2px;
+    /* position: fixed;
+    left: 0;
+    bottom: 0; */
+    /* position: sticky; */
+}
+
+.card-footer {
+    padding: 10px 20px;
+    text-align: center;
+    background-color: #3498db;
+}
+
+.card-footer a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #2980b9;
+}
+
+.card-footer a:hover {
+    background-color: #1f639e;
+}
+.light-text {
+    color: #a5a5a5;
 }
